updating readme with new instruction